@@ -2,31 +2,32 @@ package tn.esprit.spring.controllers;
 
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyLong;
+
 import static org.mockito.Mockito.when;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
 import java.time.LocalDate;
+import java.util.Collections;
+import java.util.List;
 import java.util.Set;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.boot.test.mock.mockito.MockBean;
-
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
+
 import tn.esprit.spring.entities.Subscription;
 import tn.esprit.spring.entities.TypeSubscription;
 import tn.esprit.spring.services.ISubscriptionServices;
 
 @WebMvcTest(SubscriptionRestController.class)
-public class SubscriptionRestControllerTest {
+class SubscriptionRestControllerTest {
 
     @Autowired
     private MockMvc mockMvc;
@@ -37,14 +38,14 @@ public class SubscriptionRestControllerTest {
     private Subscription subscription;
 
     @BeforeEach
-    public void setup() {
+    void setup() {
         subscription = new Subscription();
         subscription.setStartDate(LocalDate.of(2024, 1, 1));
         subscription.setTypeSub(TypeSubscription.ANNUAL);
     }
 
     @Test
-    public void testAddSubscription() throws Exception {
+    void testAddSubscription() throws Exception {
         when(subscriptionServices.addSubscription(any(Subscription.class))).thenReturn(subscription);
         mockMvc.perform(post("/subscription/add")
                         .contentType(MediaType.APPLICATION_JSON)
@@ -54,7 +55,7 @@ public class SubscriptionRestControllerTest {
     }
 
     @Test
-    public void testGetById() throws Exception {
+    void testGetById() throws Exception {
         when(subscriptionServices.retrieveSubscriptionById(anyLong())).thenReturn(subscription);
         mockMvc.perform(get("/subscription/get/1"))
                 .andExpect(status().isOk())
@@ -62,10 +63,30 @@ public class SubscriptionRestControllerTest {
     }
 
     @Test
-    public void testGetSubscriptionsByType() throws Exception {
-        Set<Subscription> subscriptions = Set.of(subscription);
+    void testGetSubscriptionsByType() throws Exception {
+        Set<Subscription> subscriptions = Collections.singleton(subscription);
         when(subscriptionServices.getSubscriptionByType(any(TypeSubscription.class))).thenReturn(subscriptions);
         mockMvc.perform(get("/subscription/all/ANNUAL"))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.length()").value(1));
+    }
+
+    @Test
+    void testUpdateSubscription() throws Exception {
+        when(subscriptionServices.updateSubscription(any(Subscription.class))).thenReturn(subscription);
+        mockMvc.perform(put("/subscription/update")
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(asJsonString(subscription)))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.typeSub").value(TypeSubscription.ANNUAL.toString()));
+    }
+
+    @Test
+    void testGetSubscriptionsByDates() throws Exception {
+        List<Subscription> subscriptions = Collections.singletonList(subscription);
+        when(subscriptionServices.retrieveSubscriptionsByDates(any(LocalDate.class), any(LocalDate.class))).thenReturn(subscriptions);
+        mockMvc.perform(get("/subscription/all/2024-01-01/2024-12-31")
+                        .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.length()").value(1));
     }
@@ -79,5 +100,4 @@ public class SubscriptionRestControllerTest {
             throw new RuntimeException(e);
         }
     }
-
 }
